@@ -1,6 +1,7 @@
 .header_isotope_tools{background-image:url(tools.png);background-position:left center;background-repeat:no-repeat;padding:2px 0 3px 20px}
 .header_import_assets{background-image:url(assets.gif);background-position:left center;background-repeat:no-repeat;padding:2px 0 3px 20px}
 .header_iso_export{background-image:url(export.png);background-position:left center;background-repeat:no-repeat;padding:2px 0 3px 20px}
+.header_iso_import{background-image:url(import.png);background-position:left center;background-repeat:no-repeat;padding:2px 0 3px 20px}
 .header_iso_copy{background-image:url(../../../themes/default/images/copy.gif);background-position:left center;background-repeat:no-repeat;padding:2px 0 3px 20px}
 .header_print_invoices{background-image:url(printer.png);background-position:left center;background-repeat:no-repeat;padding:2px 0 3px 20px}
 .tl_mediamanager th,.tl_mediamanager td{padding:2px 10px 0 0}
